<resources>
    <string name="app_name">PHOENIX</string>
    <string name="WELCOME">WELCOME</string>
    <string name="PHOENIX">PHOENIX</string>
    <string name="LOGIN">LOGIN</string>
    <string name="LOGIN_IN">LOGIN IN</string>
    <string name="SING_UP">SIGN UP</string>
    <string name="SING_IN">SIGN IN</string>
    <string name="EMAIL">E-mail</string>
    <string name="PASSWORD">Password</string>
    <string name="NOMBRE">Name</string>
    <string name="TELEFONO">Telephone</string>
    <string name="NombreTienda">Shop</string>
    <string name="Address">Address</string>
    <string name="NIT">NIT</string>
    <string name="City">City</string>
    <string name="entrega">Envío gratis en millones de productos desde $70000</string>
    <string name="oferta">OFERTAS HASTA 50% OFF</string>
</resources>