<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login2"
    tools:context=".Registro">

    <TextView
        android:id="@+id/btnsing2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/syncopate_bold"
        android:rotation="90"
        android:text="@string/SING_UP"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692" />

    <TextView
        android:id="@+id/btnlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/syncopate_bold"
        android:onClick="onClick"
        android:rotation="90"
        android:text="@string/LOGIN_IN"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/syncopate_bold"
        android:text="@string/PHOENIX"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <EditText
        android:id="@+id/txtname"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:background="@drawable/borderedondo"
        android:drawableLeft="@drawable/ic_action_usuario"
        android:ems="10"
        android:hint="@string/NOMBRE"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184" />

    <EditText
        android:id="@+id/txtemail2"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:background="@drawable/borderedondo"
        android:drawableLeft="@drawable/ic_action_email"
        android:ems="10"
        android:hint="@string/EMAIL"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.297" />

    <EditText
        android:id="@+id/txtpassword2"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:background="@drawable/borderedondo"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/PASSWORD"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408" />

    <EditText
        android:id="@+id/txtphone"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:background="@drawable/borderedondo"
        android:drawableLeft="@drawable/ic_action_phone"
        android:ems="10"
        android:hint="@string/TELEFONO"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <Button
        android:id="@+id/btnenter"
        android:layout_width="146dp"
        android:layout_height="56dp"
        android:background="@drawable/borderedondo"
        android:backgroundTint="@color/amarillo"
        android:fontFamily="@font/syncopate_bold"
        android:onClick="onClick"
        android:text="@string/SING_UP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="152dp"
        android:layout_height="148dp"
        android:background="@drawable/fenix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>